Selected products overflow fix

--- a/plugins/woocommerce-blocks/assets/css/gutenberg-products-block.scss
+++ b/plugins/woocommerce-blocks/assets/css/gutenberg-products-block.scss
@@ -652,6 +652,7 @@ p.wc-products-display-options__option-description {
 
 	.wc-products-list-card__results {
 		max-height: none;
+		overflow: visible;
 
 		h3 {
 			margin: 0 0 1em;
